--- a/app/index.html
+++ b/app/index.html
@@ -5,11 +5,12 @@
 		<title>Edu Meet </title>
 		<meta charset='UTF-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no'>
-		<meta name='description' content='mediasoup demo - Cutting Edge WebRTC Video Conferencing'>
+		<link rel='shortcut icon' href='favicon.png' />
+		<meta name='description' content='Edumeet - Cutting Edge WebRTC Video Conferencing'>
 
-		<link rel='stylesheet' href='/mediasoup-demo-app.css?v=foo2'>
+		<link rel='stylesheet' href='conference-app.css?v=foo2'>
 
-		<script src='/resources/js/antiglobal.js'></script>
+		<script src='resources/js/antiglobal.js'></script>
 		<script>
 			window.localStorage.setItem('debug', '* -engine* -socket* -RIE* *WARN* *ERROR*');
 
@@ -19,7 +20,7 @@
 				setInterval(window.antiglobal, 180000);
 			}
 		</script>
-		<script async src='/mediasoup-demo-app.js?v=foo2'></script>
+		<script async src='conference-app.js?v=foo2'></script>
 	</head>
 
 	<body>
